@@ -125,13 +125,17 @@ class ExportPlugin(Base):
                     number = movie.number
                     original_title = movie.o_title.encode(defaultEnc)
                     title = movie.title.encode(defaultEnc)
+                    grouping_title = movie.title
+                    if grouping_title is None:
+                        grouping_title = u'None'
                     if movie.director:
                         director = ' - ' + movie.director.encode(defaultEnc)
                     else:
                         director = ""
                     # group by first letter
-                    if do_grouping and title[0] != first_letter:
-                        if title[0] in '0123456789':
+                    # use movie.title/grouping_title for grouping because of encoding problems !!!
+                    if do_grouping and grouping_title[0] != first_letter:
+                        if grouping_title[0] in '0123456789':
                             # Group Numbers
                             if first_letter != '0-9':
                                 first_letter = '0-9'
@@ -139,7 +143,7 @@ class ExportPlugin(Base):
                                 p = Paragraph(paragraph_text.decode(defaultEnc), self.styles['Heading2'])
                                 Story.append(p)
                         else:
-                            first_letter = title[0]
+                            first_letter = grouping_title[0]
                             paragraph_text = '<font name=' + self.fontName + ' size="15">' + saxutils.escape(first_letter) + '</fonts>'
                             p = Paragraph(paragraph_text.decode(defaultEnc), self.styles['Heading2'])
                             Story.append(p)
